<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow android:layout_margin="@dimen/form_margin_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_title_informer"
            android:textSize="@dimen/form_title_16dp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textview_informant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1"
            android:text="@string/form_name" />

        <TextView
            android:id="@+id/textview_informant_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1"
            android:text="@string/form_last_name" />

    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/edittext_informant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edittext_informant_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/form_margin_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_title_dennounced"
            android:textSize="@dimen/form_title_16dp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1"
            android:text="@string/form_name" />

        <TextView
            android:id="@+id/textview_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1"
            android:text="@string/form_last_name" />

    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edittext_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp"
            android:layout_weight="1" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/form_margin_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_title_situation"
            android:textSize="@dimen/form_title_16dp"/>
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/edittext_situation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/form_margin_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Direccion"
            android:textSize="@dimen/form_title_16dp"/>
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/edittext_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_2dp" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/form_margin_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_title_geolocation"
            android:textSize="@dimen/form_title_16dp"/>
    </TableRow>

    <TableRow android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complaint_form_map_location"
            style="@style/ButtonFormODAWhiteTheme"
            android:id="@+id/button_location_address"/>
    </TableRow>

    <TableRow android:layout_margin="@dimen/form_margin_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin_4dp"
            android:text="@string/form_title_backup_images"
            android:textSize="@dimen/form_title_16dp"/>
    </TableRow>

    <TableRow android:gravity="center">

        <Button
            android:id="@+id/button_form_add_images"
            style="@style/ButtonFormODAWhiteTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complaint_form_attach_image" />
    </TableRow>

    <TableRow android:gravity="center"
        android:padding="10dp">
        <Button
            android:id="@+id/button_complaint_form_send_complaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_send_complaint" />
    </TableRow>




</TableLayout>